--- a/templates/nfactsTable.html
+++ b/templates/nfactsTable.html
@@ -14,7 +14,7 @@
     <tbody>
       <tr>
         <th colspan="2">
-          {{nutrients[0]|safe}}
+          {{row[0]|safe}}
         </th>
         <td class="blank-cell">
         </td>
@@ -26,77 +26,77 @@
       </tr>
       <tr>
         <th colspan="2">
-          {{nutrients[1]|safe}}
+          {{row[1]|safe}}
         </th>
         <td>
-          {{nutrients[2]|safe}}
+          {{row[2]|safe}}
         </td>
       </tr>
       <tr>
         <td class="blank-cell">
         </td>
         <th>
-          {{nutrients[3]|safe}}
+          {{row[3]|safe}}
         </th>
         <td>
-          {{nutrients[4]|safe}}
+          {{row[4]|safe}}
         </td>
       </tr>
       <tr>
         <td class="blank-cell">
         </td>
         <th>
-          {{nutrients[5]|safe}}
+          {{row[5]|safe}}
         </th>
         <td>
         </td>
       </tr>
       <tr>
         <th colspan="2">
-          {{nutrients[6]|safe}}
+          {{row[6]|safe}}
         </th>
         <td>
-          {{nutrients[7]|safe}}
+          {{row[7]|safe}}
         </td>
       </tr>
       <tr>
         <th colspan="2">
-          {{nutrients[8]|safe}}
+          {{row[8]|safe}}
         </th>
         <td>
-          {{nutrients[9]|safe}}
+          {{row[9]|safe}}
         </td>
       </tr>
       <tr>
         <th colspan="2">
-          {{nutrients[10]|safe}}
+          {{row[10]|safe}}
         </th>
         <td>
-          {{nutrients[11]|safe}}
+          {{row[11]|safe}}
         </td>
       </tr>
       <tr>
         <td class="blank-cell">
         </td>
         <th>
-          {{nutrients[12]|safe}}
+          {{row[12]|safe}}
         </th>
         <td>
-          {{nutrients[13]|safe}}
+          {{row[13]|safe}}
         </td>
       </tr>
       <tr>
         <td class="blank-cell">
         </td>
         <th>
-          {{nutrients[14]|safe}}
+          {{row[14]|safe}}
         </th>
         <td>
         </td>
       </tr>
       <tr class="thick-end">
         <th colspan="2">
-          {{nutrients[15]|safe}}
+          {{row[15]|safe}}
         </th>
         <td>
         </td>
