--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <div class="text-dark container col-9">
       <!-- Jumbotron Header -->
         <header class="jumbotron jumbotron-fluid my-0 p-4">
-        <h2 class="strong">Enter the barcode of your product<br /></h2><hr class="my-4">
+        <h2 class="strong" align="center">Enter the barcode(s) of your product(s)<br /></h2><hr class="my-4">
         </header>
       <!-- Page Features -->
       {% if error %}
@@ -28,14 +28,16 @@
         <div class="mx-auto">
           <div class="bg-light text-dark card mx-auto">
             <div class="card-body">
-              <h4 class="mb-3 card-title">Use the following format:</h4>
+              <h4 class="mb-3 card-title">Separate the barcodes with commas:</h4>
 
 <form action="{{ url_for('calculate') }}" method="GET" role="form">
 <div class="text-left form-group">
 <!--<label class="h5" for="statement1"><em>Portion size</em>, protein, total fat, carbohydrates, calories, sugars, fiber, cholesterol, trans fats, saturated fat, sodium--><br/><br/>
-<span class="lead">Example (Digestive biscuits):</span>
-<input class="form-control" type="text" placeholder="059290311419" readonly></label><br/>
-<textarea rows="2" class="form-control" name="statement1" id="statement1" >059290311419</textarea></div>
+<span class="lead">Example </br>Digestive biscuits: 059290311419</br>
+Potato chips: 084114112712</br>
+Mineral water: 3057640100178
+</span>
+<textarea rows="2" class="form-control" name="statement1" id="statement1" >059290311419,084114112712,3057640100178</textarea></div>
 <hr class="my-4">
 
 <button type="submit" class="mt-3 mb-1 btn btn-success">Rate food</button></form>
