better output description

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
 <div class="text-left form-group">
 <!--<label class="h5" for="statement1"><em>Portion size</em>, protein, total fat, carbohydrates, calories, sugars, fiber, cholesterol, trans fats, saturated fat, sodium--><br/><br/>
 <span class="lead">Example </br>Digestive biscuits: 059290311419</br>
-Potato chips: 084114112712</br>
-Mineral water: 3057640100178
+Guacamole: 767119578393</br>
+Raw almonds: 0011110724168
 </span>
 <textarea rows="2" class="form-control" name="statement1" id="statement1" >0016000275324,0016000275263,038000219740</textarea></div>
 <hr class="my-4">
