--- a/templates/calculate.html.j2
+++ b/templates/calculate.html.j2
@@ -3,11 +3,11 @@
 {% block title %} Classification results {% endblock %}
 
 {% block body %}
-
+<h1>Most relevant nutrient contents for each product have been highlighted, serving size(s) are standard</h1>
 <table style="width:100%">
   <tr>
     {% for i in names %}
-        <th align="right"><h5>{{i}}</h5></th>
+        <td align="center"><h5>{{i}}</h5></td>
     {% endfor %}
   </tr>
   <tr>
