changed code  handle multiple inputs

--- a/templates/calculate.html.j2
+++ b/templates/calculate.html.j2
@@ -5,6 +5,12 @@
 {% block body %}
 <h1>Most relevant nutrient contents for each product have been highlighted, serving size(s) are standard</h1>
 <table style="width:100%">
+{% if names|length > 1 %}
+  <tr>
+    <td align="center" colspan="{{span}}"><h5>The option with the <font color=#3053f2>{{lookFor}}</font> is <font color=#3053f2>{{best}}</font></h5></td>
+  </tr>
+{% endif %}
+  
   <tr>
     {% for i in names %}
         <td align="center"><h5>{{i}}</h5></td>
@@ -15,10 +21,10 @@
         <td>{% include './nfactsTable.html' %}</td>
     {% endfor %}
   </tr>
-  <tr>
+  <!--<tr>
     {% for i in clusters %}
         <td><h5>Found <span class="text-success">{{i}}</span> close clusters</h5></td>
     {% endfor %}
-  </tr>
+  </tr>-->
 </table>
 {% endblock %}
