--- a/templates/layout.html.j2
+++ b/templates/layout.html.j2
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+    {% include 'analytics.html' %}
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <!-- Add custom CSS -->
