--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@ Raw almonds: 0011110724168</br>
 <button type="submit" class="mt-3 mb-1 btn btn-success">Rate food</button></form>
               </div>
             </div>
+<a href="https://drive.google.com/open?id=1fuRQ-_aVukl8HGGKn4i7V0nG00qwvc_T">Demo slides</a>
           </div>
         </div>
       </div>
