webapp V2.0: barcode image input and decoding

--- a/templates/calculate.html.j2
+++ b/templates/calculate.html.j2
@@ -5,11 +5,11 @@
 {% block body %}
 <h5>Most relevant nutrient contents for each product have been highlighted, serving size(s) are standard</h5>
 <table style="width:100%">
-{% if names|length > 1 %}
+<!--{% if names|length > 1 %}
   <tr>
     <td align="center" colspan="{{span}}"><h3>The option with the <font color=#3053f2>{{lookFor}}</font> is <font color=#3053f2>{{best}}</font></h3></td>
   </tr>
-{% endif %}
+{% endif %}-->
   
   <tr>
     {% for i in names %}
