--- a/templates/demo.html
+++ b/templates/demo.html
@@ -15,8 +15,6 @@
     max-height: 85%;
 }   
 </style>
-{{ dropzone.load() }}
-{{ dropzone.style('border: 2px dashed #0087F7; margin: 5%; min-height: 300px; min-width: 300px;') }}
   </head>
   <body>
     <!-- Page Content -->
@@ -26,8 +24,22 @@
         <div class="mx-auto">
           <div class="bg-light text-dark card mx-auto">
             <div class="card-body">
-{{ dropzone.create(action_view='index') }}
-<!--      <form action="{{ url_for('index') }}" method="POST" role="form">
+              <h4 class="mb-3 card-title">Enter the barcode(s) of your product(s)</br>
+              Separate the barcodes with commas</h4>
+
+<form action="{{ url_for('calculate') }}" method="GET" role="form">
+<div class="text-left form-group">
+<!--<label class="h5" for="statement1"><em>Portion size</em>, protein, total fat, carbohydrates, calories, sugars, fiber, cholesterol, trans fats, saturated fat, sodium<br/><br/>-->
+<span >
+<b>Examples</b> </br>Digestive biscuits: 059290311419</br>
+Guacamole: 767119578393</br>
+Raw almonds: 0011110724168</br>
+(Cereals) Mini Trix, Cheerios and Froot Loops:
+</span>
+<textarea rows="2" class="form-control" name="barcodes" id="barcodes" >0016000275324,0016000275263,038000219740</textarea></div>
+<!--<hr class="my-4">-->
+<!--<h4 class="mb-2 card-title">What nutrient do you care about the most?</h4>-->
+<!--      <form action="{{ url_for('calculate') }}" method="GET" role="form">
       <label class="mt-4" for="nutrient">What nutrient do you care about the most?</label>
         <select class="form-control custom-select" name="nutrient" id="nutrient">
           <option value="energy">Calories</option>
@@ -40,12 +52,11 @@
           <option selected value="sugars">Sugar</option>
           <option value="fat">Total fats</option>
           <option value="transFat">Trans fats</option>    
-      </select>            
-<button type="submit" class="mt-3 mb-1 btn btn-success">Rate food</button></form>-->
-{{ dropzone.config() }}
+      </select>-->     
+<button type="submit" class="mt-3 mb-1 btn btn-success">Rate food</button></form>
               </div>
             </div>
-<a href="{{ url_for('demo') }}">Text input version of demo</a>  </br>
+<a href="{{ url_for('index') }}">Image-based input version of demo</a>  </br>            
 <a href="https://drive.google.com/open?id=1fuRQ-_aVukl8HGGKn4i7V0nG00qwvc_T">Demo slides</a>
           </div>
         </div>
